--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <body>
+      <div id="root" class="all-width">
+
+      </div>
+    </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
       setTimeout((e) => {
