--- a/public/index.html
+++ b/public/index.html
@@ -28,11 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <body>
-      <div id="root" class="all-width">
-
-      </div>
-    </body>
+    <div id="root"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
       setTimeout((e) => {
