--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="stylesheet" href="/src/style/index.css">
+    <link rel="stylesheet" href="/src/style/index.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -45,7 +45,7 @@
           } else if (e.which) {
             nextCode = e.which;
           }
-          //console.log(nextCode,String.fromCharCode(nextCode))
+          // console.log(nextCode, String.fromCharCode(nextCode));
           nextTime = new Date().getTime();
 
           var input = $(".input-group").children(2)[1];
